# late-chunking

./: README.md  examples.ipynb  explanatory_contextual_retrieval.py  parse_experiments.py  plot_chunk_size_experiments.py  plot_macro_chunking_experiments.py  plot_soft_boundary_experiments.py  pyproject.toml  requirements.txt  run_chunked_eval.py  run_chunked_eval_with_macro_chunks.py  run_soft_vs_hard_boundary.py  soft_token_boundary.py
.github/workflows/: ci.yaml
chunked_pooling/: __init__.py  chunked_eval_tasks.py  chunking.py  mteb_chunked_eval.py  wrappers.py
experiments/: lib.py
results-chunked-pooling/chunk_size_1024/no_model_name_available/no_revision_available/: LEMBSummScreenFDRetrievalChunked.json  LEMBWikimQARetrievalChunked.json
results-chunked-pooling/chunk_size_128/no_model_name_available/no_revision_available/: LEMBSummScreenFDRetrievalChunked.json  LEMBWikimQARetrievalChunked.json
results-chunked-pooling/chunk_size_16/no_model_name_available/no_revision_available/: LEMBSummScreenFDRetrievalChunked.json  LEMBWikimQARetrievalChunked.json
results-chunked-pooling/chunk_size_256/no_model_name_available/no_revision_available/: LEMBSummScreenFDRetrievalChunked.json  LEMBWikimQARetrievalChunked.json
results-chunked-pooling/chunk_size_32/no_model_name_available/no_revision_available/: LEMBSummScreenFDRetrievalChunked.json  LEMBWikimQARetrievalChunked.json
tests/: conftest.py  test_api.py  test_chunking.py  test_chunking_methods.py  test_v3.py
(+102 files in other folders)
